change src image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="csrf-token"
       content="6tKY36eGonoF0p2jrhIWkad4W0fJ1OtdyA5ZuRsR"
     />
-    <link rel="shortcut icon" href="/images/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon" />
     <meta property="fb:app_id" content="" />
     <title>HoaSen Spa - số 1 Massage Trị liệu đau vai gáy lưng</title>
     <meta
@@ -218,7 +218,7 @@
                     <a href="javascript:void(0)">
                       <div class="banner-thumb">
                         <img
-                          src="/images/banner.jpg"
+                          src="./images/banner.jpg"
                           alt="HoaSen spa số 1 massage trị liệu bấm huyệt"
                         />
                       </div>
@@ -250,7 +250,7 @@
                       >
                     </p>
                     <p style="text-align: center">
-                      <img src="/images/gioiThieu.jpg" />
+                      <img src="./images/gioiThieu.jpg" />
                     </p>
                   </div>
                 </div>
@@ -261,10 +261,10 @@
             <div class="container">
               <div class="bangGiaContent">
                 <div style="margin-right: 20px">
-                  <img src="/images/bangGia1.jpg" />
+                  <img src="./images/bangGia1.jpg" />
                 </div>
                 <div style="margin-left: 20px">
-                  <img src="/images/bangGia2.jpg" />
+                  <img src="./images/bangGia2.jpg" />
                 </div>
               </div>
             </div>
@@ -302,7 +302,7 @@
                           >
                             <span class="discount-stripe">-20%</span>
                             <img
-                              src="/images/anh1.jpg"
+                              src="./images/anh1.jpg"
                               width="100%"
                               height="100%"
                               class="lazyload"
@@ -337,7 +337,7 @@
                           >
                             <span class="discount-stripe">-20%</span>
                             <img
-                              src="/images/anh2.jpg"
+                              src="./images/anh2.jpg"
                               width="100%"
                               height="100%"
                               class="lazyload"
@@ -370,7 +370,7 @@
                           >
                             <span class="discount-stripe">-20%</span>
                             <img
-                              src="/images/anh3.jpg"
+                              src="./images/anh3.jpg"
                               width="100%"
                               height="100%"
                               class="lazyload"
@@ -409,7 +409,7 @@
                           >
                             <span class="discount-stripe">-20%</span>
                             <img
-                              src="/images/anh4.jpg"
+                              src="./images/anh4.jpg"
                               width="100%"
                               height="100%"
                               class="lazyload"
@@ -445,7 +445,7 @@
                           >
                             <span class="discount-stripe">-10%</span>
                             <img
-                              src="/images/anh5.jpg"
+                              src="./images/anh5.jpg"
                               width="100%"
                               height="100%"
                               class="lazyload"
