change src image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       name="twitter:description"
       content="HoaSen Spa - liệu tình Massage Trị liệu đau vai gáy lưng: tắm lá thuốc, xông hơi, vật lý trị liệu, massage bấm huyệt, nắn chỉnh cột sống, cạo gió giác hơi giải cảm"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="dns-prefetch" href="https://static.loveitopcdn.com" />
     <link rel="dns-prefetch" href="https://media.loveitopcdn.com" />
     <link
